kaios_rcs-main/lims/src/cpm/EcrioCPMParseXML.c
/******************************************************************************

Copyright (c) 2019-2020 Ecrio, Inc. All Rights Reserved.

Provided as supplementary materials for Licensed Software.

This file contains Confidential Information of Ecrio, Inc. and its suppliers.
Certain inventions disclosed in this file may be claimed within patents owned
or patent applications filed by Ecrio or third parties. No part of this
software may be reproduced or transmitted in any form or by any means or used
to make any derivative work (such as translation, transformation or
adaptation) without express prior written consent from Ecrio. You may not mark
or brand this file with any trade name, trademarks, service marks, or product
names other than the original brand (if any) provided by Ecrio. Any use of
Ecrio's or its suppliers work, confidential information, patented inventions,
or patent-pending inventions is subject to the terms and conditions of your
written license agreement with Ecrio. All other use and disclosure is strictly
prohibited.

Ecrio reserves the right to revise this software and to make changes in
content from time to time without obligation on the part of Ecrio to provide
notification of such revision or changes.

ECRIO MAKES NO REPRESENTATIONS OR WARRANTIES THAT THE SOFTWARE IS FREE OF
ERRORS OR THAT THE SOFTWARE IS SUITABLE FOR YOUR USE. THE SOFTWARE IS PROVIDED
ON AN "AS IS" BASIS FOR USE AT YOUR OWN RISK. ECRIO MAKES NO WARRANTIES,
TERMS OR CONDITIONS, EXPRESS OR IMPLIED,EITHER IN FACT OR BY OPERATION OF LAW,
STATUTORY OR OTHERWISE, INCLUDING WARRANTIES, TERMS, OR CONDITIONS OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND SATISFACTORY QUALITY.

TO THE FULL EXTENT ALLOWED BY LAW, ECRIO ALSO EXCLUDES FOR ITSELF AND ITS
SUPPLIERS ANY LIABILITY, WHETHER BASED IN CONTRACT OR TORT (INCLUDING
NEGLIGENCE), FOR DIRECT, INCIDENTAL, CONSEQUENTIAL, INDIRECT, SPECIAL, OR
PUNITIVE DAMAGES OF ANY KIND, OR FOR LOSS OF REVENUE OR PROFITS, LOSS OF
BUSINESS, LOSS OF INFORMATION OR DATA, OR OTHER FINANCIAL LOSS ARISING OUT
OF OR IN CONNECTION WITH THIS SOFTWARE, EVEN IF ECRIO HAS BEEN ADVISED OF THE
POSSIBILITY OF SUCH DAMAGES. THIS SOFTWARE MAY BE PROVIDED ON A DOWNLOAD SITE OR
ON COMPACT DISK AND THE OTHER SOFTWARE AND DOCUMENTATION ON THE DOWNLOAD SITE OR
COMPACT DISK ARE SUBJECT TO THE LICENSE AGREEMENT ACCOMPANYING THE COMPACT DISK.

******************************************************************************/

/**
 * @file EcrioCPMParseXML.c
 * @brief Implementation of the CPM module parsing functionality.
*/

#include "EcrioPAL.h"
#include "EcrioCPM.h"
#include "EcrioCPMInternal.h"


/* #line 56 "EcrioCPMParseXML.c" */
static const int ec_cpm_XMLParser_start = 1;
static const int ec_cpm_XMLParser_first_final = 458;
static const int ec_cpm_XMLParser_error = 0;

static const int ec_cpm_XMLParser_en_main = 1;


/* #line 279 "EcrioCPMParseXML.rl" */


u_int32 ec_CPM_ParseXmlDocument
(
	EcrioCPMContextStruct *pContext,
	EcrioCPMParsedXMLStruct **ppParsedXml,
	char *pData,
	u_int32 uLen
)
{
	u_int32 uCPMError = ECRIO_CPM_NO_ERROR;
	EcrioCPMParsedXMLStruct *pCurr = NULL;
	EcrioCPMParsedXMLStruct *pStruct = NULL;
	EcrioCPMParsedXMLAttrStruct *pAttr = NULL;
	s_int32 cs = 1;
	const char *p;
	const char *pe;
	const char *eof;
	const char *tag_start = NULL;
	const char *value_start = NULL;
	BoolEnum bIsValue = Enum_FALSE;

	if (pContext == NULL || ppParsedXml == NULL || pData == NULL || uLen == 0)
	{
		return ECRIO_CPM_INSUFFICIENT_DATA_ERROR;
	}

	CPMLOGI(pContext->hLogHandle, KLogTypeFuncEntry, "%s:%u", __FUNCTION__, __LINE__);
	CPMLOGI(pContext->hLogHandle, KLogTypeGeneral, "%s:%u\tpData = %x, uLen = %d", __FUNCTION__, __LINE__, pData, uLen);

	pCurr = (void*)ppParsedXml;

	p = pData;
	pe = pData + uLen;
	eof = pe;

	
/* #line 102 "EcrioCPMParseXML.c" */
	{
	cs = ec_cpm_XMLParser_start;
	}

/* #line 316 "EcrioCPMParseXML.rl" */
	
/* #line 109 "EcrioCPMParseXML.c" */
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 13: goto st2;
		case 32: goto st2;
		case 60: goto st401;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto st2;
	goto tr0;
tr0:
/* #line 195 "EcrioCPMParseXML.rl" */
	{
		CPMLOGE(pContext->hLogHandle, KLogTypeGeneral, "%s:%u\tError: p = 0x%x, number = %d, pe = 0x%x", __FUNCTION__, __LINE__, p, p - pData, pe);
		CPMLOGE(pContext->hLogHandle, KLogTypeGeneral, "%s:%u\tValue: %2.2x %2.2x %2.2x %2.2x %2.2x %2.2x %2.2x %2.2x |%2.2x| %2.2x %2.2x %2.2x", __FUNCTION__, __LINE__,
			*(p-8), *(p-7), *(p-6), *(p-5), *(p-4), *(p-3), *(p-2), *(p-1), *(p), *(p+1), *(p+2), *(p+3));
		uCPMError = ECRIO_CPM_INSUFFICIENT_DATA_ERROR;
	}
	goto st0;
/* #line 133 "EcrioCPMParseXML.c" */
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 13: goto st2;
		case 32: goto st2;
		case 60: goto st3;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto st2;
	goto tr0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	switch( (*p) ) {
		case 33: goto st112;
		case 58: goto tr4;
		case 63: goto st395;
		case 95: goto tr4;
	}
	if ( (*p) < -8 ) {
		if ( (*p) > -42 ) {
			if ( -40 <= (*p) && (*p) <= -10 )
				goto tr4;
		} else if ( (*p) >= -64 )
			goto tr4;
	} else if ( (*p) > -1 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr4;
		} else if ( (*p) >= 65 )
			goto tr4;
	} else
		goto tr4;
	goto tr0;
tr4:
/* #line 81 "EcrioCPMParseXML.rl" */
	{
		tag_start = p;
	}
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
/* #line 184 "EcrioCPMParseXML.c" */
	switch( (*p) ) {
		case -41: goto tr0;
		case -9: goto tr0;
		case 13: goto tr8;
		case 32: goto tr8;
		case 47: goto tr9;
		case 62: goto tr10;
		case 96: goto tr0;
	}
	if ( (*p) < 9 ) {
		if ( (*p) < -72 ) {
			if ( (*p) <= -74 )
				goto tr0;
		} else if ( (*p) > -65 ) {
			if ( 0 <= (*p) && (*p) <= 8 )
				goto tr0;
		} else
			goto tr0;
	} else if ( (*p) > 10 ) {
		if ( (*p) < 59 ) {
			if ( 11 <= (*p) && (*p) <= 44 )
				goto tr0;
		} else if ( (*p) > 64 ) {
			if ( (*p) > 94 ) {
				if ( 123 <= (*p) )
					goto tr0;
			} else if ( (*p) >= 91 )
				goto tr0;
		} else
			goto tr0;
	} else
		goto tr8;
	goto st4;
tr8:
/* #line 92 "EcrioCPMParseXML.rl" */
	{
		if (bIsValue == Enum_TRUE)
		{
			bIsValue = Enum_FALSE;
		}

		pal_MemoryAllocate((u_int32)sizeof(EcrioCPMParsedXMLStruct), (void **)&pStruct);
		if (NULL == pStruct)
		{
			uCPMError = ECRIO_CPM_MEMORY_ERROR;

			CPMLOGE(pContext->hLogHandle, KLogTypeGeneral, "%s:%u\tpal_MemoryAllocate() uError=%u",
				__FUNCTION__, __LINE__, uCPMError);
			goto END;
		}
		pal_MemorySet((void*)pStruct, 0, sizeof(EcrioCPMParsedXMLStruct));
		pStruct->parent = (void*)pCurr;
		pCurr = pStruct;

		pStruct->pElementName = pal_StringCreate((u_char*)tag_start, p - tag_start);
	}
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
/* #line 246 "EcrioCPMParseXML.c" */
	switch( (*p) ) {
		case 13: goto st5;
		case 32: goto st5;
		case 47: goto st12;
		case 58: goto tr11;
		case 62: goto st25;
		case 95: goto tr11;
	}
	if ( (*p) < -8 ) {
		if ( (*p) > -42 ) {
			if ( -40 <= (*p) && (*p) <= -10 )
				goto tr11;
		} else if ( (*p) >= -64 )
			goto tr11;
	} else if ( (*p) > -1 ) {
		if ( (*p) < 65 ) {
			if ( 9 <= (*p) && (*p) <= 10 )
				goto st5;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr11;
		} else
			goto tr11;
	} else
		goto tr11;
	goto tr0;
tr11:
/* #line 81 "EcrioCPMParseXML.rl" */
	{
		tag_start = p;
	}
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
/* #line 283 "EcrioCPMParseXML.c" */
	switch( (*p) ) {
		case -41: goto tr0;
		case -9: goto tr0;
		case 13: goto tr16;
		case 32: goto tr16;
		case 47: goto tr0;
		case 61: goto tr17;
		case 96: goto tr0;
	}
	if ( (*p) < 9 ) {
		if ( (*p) < -72 ) {
			if ( (*p) <= -74 )
				goto tr0;
		} else if ( (*p) > -65 ) {
			if ( 0 <= (*p) && (*p) <= 8 )
				goto tr0;
		} else
			goto tr0;
	} else if ( (*p) > 10 ) {
		if ( (*p) < 59 ) {
			if ( 11 <= (*p) && (*p) <= 44 )
				goto tr0;
		} else if ( (*p) > 64 ) {
			if ( (*p) > 94 ) {
				if ( 123 <= (*p) )
					goto tr0;
			} else if ( (*p) >= 91 )
				goto tr0;
		} else
			goto tr0;
	} else
		goto tr16;
	goto st6;
tr16:
/* #line 124 "EcrioCPMParseXML.rl" */
	{
		pal_MemoryAllocate((u_int32)sizeof(EcrioCPMParsedXMLAttrStruct), (void **)&pAttr);
		if (NULL == pAttr)
		{
			uCPMError = ECRIO_CPM_MEMORY_ERROR;

			CPMLOGE(pContext->hLogHandle, KLogTypeGeneral, "%s:%u\tpal_MemoryAllocate() uError=%u",
				__FUNCTION__, __LINE__, uCPMError);
			goto END;
		}

		if (pStruct->uNumOfAttr == 0)
		{
			pal_MemoryAllocate((u_int32)sizeof(EcrioCPMParsedXMLAttrStruct*), (void **)&pStruct->ppAttr);
		}
		else
		{
			/* Check arithmetic overflow */
			if (pal_UtilityArithmeticOverflowDetected(pStruct->uNumOfAttr, 1) == Enum_TRUE)
			{
				uCPMError = ECRIO_CPM_MEMORY_ERROR;
				goto END;
			}

			/* Check for memory overflow - exclude if memory to be allocated exceeds limit of u_int32 */
			if (pal_UtilityDataOverflowDetected((pStruct->uNumOfAttr + 1), sizeof(EcrioCPMParsedXMLAttrStruct*)) == Enum_TRUE)
			{
				uCPMError = ECRIO_CPM_MEMORY_ERROR;
				goto END;
			}
			pal_MemoryReallocate((u_int32)((pStruct->uNumOfAttr + 1) * sizeof(EcrioCPMParsedXMLAttrStruct*)), (void **)&pStruct->ppAttr);
		}
		if (NULL == pStruct->ppAttr)
		{
			uCPMError = ECRIO_CPM_MEMORY_ERROR;

			CPMLOGE(pContext->hLogHandle, KLogTypeGeneral, "%s:%u\tpal_MemoryAllocate() uError=%u",
				__FUNCTION__, __LINE__, uCPMError);
			goto END;
		}
		pStruct->ppAttr[pStruct->uNumOfAttr] = pAttr;
		pStruct->uNumOfAttr++;

		pAttr->pAttrName = pal_StringCreate((u_char*)tag_start, p - tag_start);
	}
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
/* #line 356 "EcrioCPMParseXML.c" */
	switch( (*p) ) {
		case 13: goto st7;
		case 32: goto st7;
		case 61: goto st8;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto st7;
	goto tr0;
tr17:
/* #line 124 "EcrioCPMParseXML.rl" */
	{
		pal_MemoryAllocate((u_int32)sizeof(EcrioCPMParsedXMLAttrStruct), (void **)&pAttr);
		if (NULL == pAttr)
		{
			uCPMError = ECRIO_CPM_MEMORY_ERROR;

			CPMLOGE(pContext->hLogHandle, KLogTypeGeneral, "%s:%u\tpal_MemoryAllocate() uError=%u",
				__FUNCTION__, __LINE__, uCPMError);
			goto END;
		}

		if (pStruct->uNumOfAttr == 0)
		{
			pal_MemoryAllocate((u_int32)sizeof(EcrioCPMParsedXMLAttrStruct*), (void **)&pStruct->ppAttr);
		}
		else
		{
			/* Check arithmetic overflow */
			if (pal_UtilityArithmeticOverflowDetected(pStruct->uNumOfAttr, 1) == Enum_TRUE)
			{
				uCPMError = ECRIO_CPM_MEMORY_ERROR;
				goto END;
			}

			/* Check for memory overflow - exclude if memory to be allocated exceeds limit of u_int32 */
			if (pal_UtilityDataOverflowDetected((pStruct->uNumOfAttr + 1), sizeof(EcrioCPMParsedXMLAttrStruct*)) == Enum_TRUE)
			{
				uCPMError = ECRIO_CPM_MEMORY_ERROR;
				goto END;
			}
			pal_MemoryReallocate((u_int32)((pStruct->uNumOfAttr + 1) * sizeof(EcrioCPMParsedXMLAttrStruct*)), (void **)&pStruct->ppAttr);
		}
		if (NULL == pStruct->ppAttr)
		{
			uCPMError = ECRIO_CPM_MEMORY_ERROR;

			CPMLOGE(pContext->hLogHandle, KLogTypeGeneral, "%s:%u\tpal_MemoryAllocate() uError=%u",
				__FUNCTION__, __LINE__, uCPMError);
			goto END;
		}
		pStruct->ppAttr[pStruct->uNumOfAttr] = pAttr;
		pStruct->uNumOfAttr++;
